package smarthome.domain.value;

public interface FactoryValue {
}
