@startuml
title US23: As Product Owner, I want the system to have a type of sensor that gives the solar irradiance (W/m2).
'https://plantuml.com/class-diagram

interface Sensor {
+getSensorName(): String
+getSensorFunctionality(): SensorFunctionality
}

interface SensorSpecificTimeLocation extends Sensor{
+getValueAtSpecificTimeAndLocation\n(Timestamp dateAndTime, GPSCode gpsCode): String
}

class SolarIrradianceSensor implements SensorSpecificTimeLocation{
-sensorName: String
-sensorFunctionality: SensorFunctionality
-factoryValue: FactoryValue
-value: Value
+getSensorName(): String
+getSensorFunctionality(): SensorFunctionality
+getValueAtSpecificTimeAndLocation\n(Timestamp dateAndTime, GPSCode gpsCode): String
}

class FactoryValue {
+createValueTimeAndLocation(): Value
}

enum SensorFunctionality {
    TEMPERATURE,
    HUMIDITY,
    BINARY_STATUS,
    SCALE_POSITION,
    WIND,
    SUNRISE,
    SUNSET,
    DEW_POINT,
    SOLAR_RADIATION,
    POWER,
    ENERGY
    }

class SolarIrradianceSensorValue implements Value{
-unit: String
-dateAndTime: Timestamp
-gpsCode: GPSCode
+getValueWithUnit(): String
}

interface Value {
+getValueWithUnit(): String
}

FactoryValue - SolarIrradianceSensor: has
FactoryValue ..> SolarIrradianceSensorValue: <<creates>>
SolarIrradianceSensor - SensorFunctionality: has
SolarIrradianceSensor -- SolarIrradianceSensorValue: has

@enduml